2003-04-01  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

        NSURLConnectionDelegate is no longer a formal protocol.

        NSURLConnection no longer has a loadWithDelegate: method. Loads
        start implicitly at init time. Some clients have been updated
        to call the willSendRequest:redirectResponse: callback manually
        since this callback is no longer sent for initial loads.

        * Downloads.subproj/WebDownload.m:
        (-[WebDownload initWithRequest:]):
        (-[WebDownload _initWithLoadingResource:request:response:delegate:proxy:]):
        (-[WebDownload loadWithDelegate:]):
        * Misc.subproj/WebIconLoader.h:
        * Misc.subproj/WebIconLoader.m:
        (-[WebIconLoader startLoading]):
        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate loadWithRequest:]):
        * WebView.subproj/WebMainResourceClient.h:
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient loadWithRequest:]):
        (-[WebResourceDelegateProxy setDelegate:]):

2003-04-01  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3213918 -- REGRESSION: printing Mapquest directions, screen font is used, causing exception, crashes
	- fixed 3144287 -- CSS with media=print not used when printing

        * WebView.subproj/WebFramePrivate.m: (-[WebFrame _opened]): Don't call the reapplyStyles
        method directly here, use setNeedsToApplyStyles instead.
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView reapplyStyles]): Pass the appropriate device type here.
        (-[WebHTMLView drawRect:]): Don't call setUsingPrinterFonts:NO at the end of this method
        if we were already using printer fonts at the start. This was the bug fix.
        (-[WebHTMLView _setPrinting:]): Renamed from _setUsingPrinterFonts since this now controls
        the styles used too, not just the fonts.